Fixed margin spacing between elements.

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 p {
-    margin-bottom: 1.4em;
+    margin-bottom: 1.2em;
     line-height: 1.5;
 }
 
@@ -103,7 +103,7 @@ a:hover {
 
 .icons i {
     padding: 0 25px;
-    margin: 30px 30px;
+    margin: 0 30px 45px 30px;
     color: white;
     text-shadow: 2px 2px 0px rgb(36, 51, 45);
     -moz-text-shadow: 2px 2px 0px rgb(36, 51, 45);
